Ready to deploy

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     }
   },
   "env": {
-    "MONGODB_URI": "@mongodb_uri"
+    "MONGODB_URI": "@mongodb_uri",
+    "NEXT_PUBLIC_SITE_URL": "@site_url"
   }
 }
