--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "eslint",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "create-admin": "node scripts/create-admin.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/nodemailer": "^7.0.1",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.13",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
