Security: Remove exposed credentials from documentation
- Remove hardcoded MongoDB URI with credentials from all docs
- Remove admin passwords from ADMIN_LOGIN.md and test scripts
- Remove ImageKit endpoint with account identifier
- Update .gitignore to prevent future credential leaks
- Add env.example template for safe credential management
- Update test scripts to use environment variables instead of hardcoded passwords

⚠️ IMPORTANT: Rotate all exposed credentials immediately:
- MongoDB Atlas password for atiqulimondev_db_user
- Admin passwords
- Any other exposed secrets

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,17 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+!.env.template
+
+# Security: Never commit files with credentials
+**/credentials.json
+**/secrets.json
+**/*.key
+**/*.pem
+**/config.local.*
+**/ADMIN_CREDENTIALS.md
+**/SECRETS.md
 
 # vercel
 .vercel
