feat: Complete admin panel UI/UX upgrade (Phases 1-8)
- Phase 1: Design system foundation with purple/violet theme
- Phase 2: Enhanced navigation with collapsible sidebar and top header
- Phase 3: Dashboard with charts, stat cards, and data visualization
- Phase 4: Advanced forms with validation, multi-step, and auto-save
- Phase 5: Loading states, animations, and user feedback components
- Phase 6: Advanced features (search, shortcuts, bulk operations, activity timeline)
- Phase 7: Performance optimizations (virtual scrolling, debouncing, lazy loading)
- Phase 8: Polish and refinement (error pages, onboarding, visual consistency)

Added 30+ new UI components, hooks, and utilities for industry-grade admin panel.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/mongoose": "^5.11.96",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
@@ -28,7 +30,9 @@
     "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.9",
     "react": "19.1.2",
-    "react-dom": "19.1.2"
+    "react-dom": "19.1.2",
+    "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
