--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
-    "next": "15.5.7",
+    "next": "^16.1.1",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.9",
-    "react": "19.1.2",
-    "react-dom": "19.1.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0"
   },
@@ -42,7 +42,7 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.7",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
